<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Pulse</string>
    <!-- description -->
    <string name="app_desc">Pulse</string>
    <!--Plugin Strings-->
    <string name="type_user">Type User</string>
    <string name="combat_id">Combat Id: </string>
    <string name="cancel">Cancel</string>
    <string name="bpm">bpm</string>
    <string name="brpm">brpm</string>
    <string name="last_report">Last Report:</string>
    <string name="fdp_authorized">FDP:</string>
    <string name="confirm">Confirm</string>
    <string name="tccc_man">tccc_man</string>
    <string name="personnel_preferences">Personnel Preferences</string>
    <string name="call_sign">Call Sign</string>
    <string name="csn">Call Sign:</string>
    <string name="time">Time</string>
    <string name="tq_r_leg">TQ R Leg</string>
    <string name="tq_l_leg">TQ L Leg</string>
    <string name="pressure_dressing">Pressure Dressing</string>
    <string name="elevation">Elevation</string>
    <string name="tq_r_arm">TQ R Arm</string>
    <string name="treatments">Treatments</string>
    <string name="injury_definition">Injury Definition</string>
    <string name="connected_status">Connected</string>
    <string name="blood_type">Blood Type:</string>
    <string name="drug_allergies">Allergies:</string>
    <string name="place_holder_cs">BR12</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="treatments_c">Treatments C</string>
    <string name="trauma_treatments">Trauma &amp; Treatments</string>
    <string name="mech">Mechanism of injury</string>
    <string name="mech_of_inj">Mechanism of injury:</string>

    <string name="extremity">Extremity</string>
    <string name="junctional">Junctional</string>
    <string name="truncal">Truncal</string>
    <string name="dressing">Dressing</string>
    <string name="hemostatic">Hemostatic</string>
    <string name="pressure">Pressure</string>
    <string name="intact">Intact</string>
    <string name="npa">NPA</string>
    <string name="cric">CRIC</string>
    <string name="et_tube">ET-Tube</string>
    <string name="sga">SGA</string>
    <string name="type">Type</string>
    <string name="o2">O2</string>
    <string name="needle_d">Needle-D</string>
    <string name="chest_tube">Chest-Tube</string>
    <string name="blood">Blood Product</string>
    <string name="analgesic">Analgesic \n (eg. Ketamine, Fentanyl)</string>
    <string name="route">Route</string>
    <string name="pill_pack">Pill Pack</string>
    <string name="eye_shield">Eye Shield</string>
    <string name="splint">Splint</string>
    <string name="hypothermia_prevention">Hypothermia Prevention</string>
    <string name="tq_treatments">TQ Treatments</string>
    <string name="select_item">Select item</string>
    <string name="name">Name</string>
    <string name="volume">Volume</string>
    <string name="antibiotic">Antibiotic \n e.g. Moxifloxacin, Ertaphen</string>
    <string name="x_all_that_apply">(x all that apply)</string>
    <string name="chest_seal">Chest-Seal</string>
    <string name="r">R</string>
    <string name="l">L</string>
    <string name="meds">MEDS</string>
    <string name="treatment_table_c">Treatment Table C:</string>
    <string name="_42s_pa_12345_12345">42 SPA 34253 23503</string>
    <string name="dash">---</string>
    <string name="delete_all">Delete All</string>
    <string name="reset_treatments">Reset Treatments</string>
    <string name="erase_warning">This will erase all your user data</string>
    <string name="latest_firmware">Latest Firmware</string>
    <string name="reduced_power">Reduced Power</string>
    <string name="delete_self">Delete Data</string>
    <string name="settings">Settings</string>
    <string name="percent">%</string>
    <string name="patient_monitor">Patient Monitor</string>
    <string name="close_monitor">Close Monitor</string>
    <string name="my_data">My data</string>
    <string name="body_battery">Body Battery:</string>
    <string name="exertion">Exertion:</string>
    <string name="not_authorized">Not Authorized</string>
    <string name="processing">Processing...</string>
    <string name="eta">ETA</string>
    <string name="asset_type">Asset Type</string>
    <string name="blunt">Blunt</string>
    <string name="frag_m">Frag M</string>
    <string name="frag_s">Frag S</string>
    <string name="gsw">Bullet</string>
    <string name="other">Other: </string>
    <string name="other2">Other </string>
    <string name="fall">Fall</string>
    <string name="tq_l_arm">TQ L Arm</string>
    <string name="burn">Burn</string>
    <string name="casevac_complete">Casevac Complete</string>
    <string name="sting">Sting</string>
    <string name="smoke">Smoke</string>
    <string name="chemical">Chemical</string>
    <string name="nuclear">Nuclear</string>
    <string name="radiation">Radiation</string>
    <string name="knife">Knife</string>
    <string name="blast">Blast</string>
    <string name="cold">Cold</string>
    <string name="heat">Heat</string>
    <string name="crush">Crush</string>
    <string name="remarks">Remarks</string>
    <string name="fluid">Fluid</string>
    <string name="unit">Unit</string>
    <string name="injury_location">Injury Location</string>
    <string name="keypad_done">Done</string>
    <string name="action_done">Done</string>
    <string name="install_alert">Ready to install Pulse App?</string>
    <string name="us_mil">US-Mil</string>
</resources>
