<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/mech"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_btn_blast"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/blast"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_bullet"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/gsw"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_cold"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/cold"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_crush"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/crush"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_frag_s"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/frag_s"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_knife"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/knife"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_nuc"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/nuclear"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_smoke"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/smoke"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_btn_blunt"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/blunt"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_burn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/burn"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_heat"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/heat"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_fall"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fall"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_frag_m"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/frag_m"
                android:textColor="@color/light_grey"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_rad"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="2dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/radiation"
                android:textSize="12sp"/>

            <CheckBox
                android:id="@+id/cb_btn_chem"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="2dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/chemical"
                android:textSize="12sp"/>

            <CheckBox
                android:id="@+id/cb_btn_sting"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="2dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sting"
                android:textSize="12sp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/other"
            android:textColor="@color/light_grey"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_mech_injury_other"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@drawable/table_borders"
            android:gravity="center_vertical|start"
            android:imeOptions="actionDone"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>