<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darker_gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/tq_treatments"
        android:textAllCaps="true"
        android:layout_margin="4dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_tq_L_arm"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="2dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tq_l_arm"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_tq_L_leg"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="2dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tq_l_leg"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cb_btn_pressure"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="2dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pressure_dressing"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_tq_R_arm"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="2dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tq_r_arm"
                android:textSize="12sp" />
            <CheckBox
                android:id="@+id/cb_tq_R_leg"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="2dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tq_r_leg"
                android:textSize="12sp"/>

            <CheckBox
                android:id="@+id/cb_btn_elevation"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="2dp"
                android:textColor="@color/light_grey"
                android:background="@drawable/table_borders"
                android:button="@android:color/transparent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/elevation"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>