<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_data_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="#333"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/card_header"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_active_self_asset_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/us_mil"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tv_item_self_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_42s_pa_12345_12345"
            android:gravity="center_vertical|end"
            android:textAllCaps="true"
            android:layout_marginEnd="8dp"
            android:textColor="@color/med_grey"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/icon_id"
            android:tint="@color/light_grey"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/combat_id"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tv_item_self_combat_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center_vertical"
            android:text="1234"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888" />


    <LinearLayout
        android:id="@+id/ll_treatments_administered"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:background="@drawable/btn_team"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/pulse_casevac_red"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:layout_weight="1"
            android:text="@string/trauma_treatments"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/pulse_red"
            app:tint="@color/led_green"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/exertion"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tv_item_self_exert"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center_vertical"
            android:text="52"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_body_battery"
            android:tint="@color/teal"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/body_battery"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tv_body_batt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center_vertical"
            android:text="@string/dash"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/blood_type"
            android:tint="@color/soft_red"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/blood_type"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tv_self_blood_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="O Neg"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="normal" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/allergies"
            android:tint="@color/led_light_gray"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/drug_allergies"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tv_allergies"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="Asprin"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/injection"
            android:tint="@color/gold"
            tools:ignore="UseAppTint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/fdp_authorized"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="italic|bold" />


        <TextView
            android:id="@+id/cb_fdp_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/not_authorized"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>
</LinearLayout>
